@@ -94,6 +94,7 @@ Template for new versions:
 ## Lua
 - ``ZScreen``: new ``defocused`` property for starting screens without keyboard focus
 - ``dfhack.units``: allow historical figures to be passed instead of units for ``getReadableName``, ``getVisibleName``, and ``getProfessionName``
+- ``dfhack.items.moveToInventory``: make ``use_mode`` and ``body_part`` args optional
 
 ## Removed
 - The ``PRELOAD_LIB`` environment variable has been renamed to ``DF_PRELOAD`` to match the naming scheme of other environment variables used by the ``dfhack`` startup script. If you are preloading libraries (e.g. for performance testing) please define ``DF_PRELOAD`` instead of ``PRELOAD_LIB`` or ``LD_PRELOAD``
